# pulse-os

./: .bandit  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  REFACTOR_PLAN.md  SECURITY.md  TESTING.md  VERSION  pulse-devices.conf.sample  pulse-mcp.conf.sample  pulse.conf.sample  pyproject.toml  release.config.js  setup.sh
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build.yaml  claude-code-review.yaml  codeql.yaml  fuzz.yaml  scorecard.yaml
assets/: boot-splash.rgb  boot-splash.tga
assets/overlay/: overlay.css  overlay.js
assets/sounds/pack/: manifest.json
config/: wifi-band-policy  wifi-band-policy.sample
config/apt/: manual-packages.txt
config/home/: init.vim  vimrc
config/plymouth/pulse/: pulse.plymouth  pulse.script
config/system/: pulse-assistant.service  pulse-audio-watchdog.service  pulse-backlight-sun.service  pulse-backlight.conf  pulse-bt-mute.service  pulse-daily-reboot.service  pulse-daily-reboot.timer  pulse-hw-watchdog.service  pulse-kiosk-mqtt.service  pulse-snapclient.service  pulse-wifi-band-fallback.service
config/system-user/: bt-autoconnect.service  bt-autoconnect.timer  pulse-assistant-display.service
config/system/NetworkManager/: wifi-powersave-off.conf
config/system/plymouth-quit-wait.service.d/: override.conf
config/system/syslog-ng/: remote-log.conf  remote-log.conf.template
config/system/syslog-ng.service.d/: override.conf
config/system/watchdog/: disable-runtime-watchdog.conf  watchdog.conf
config/www/: pulse-photo-card.js
config/x/: profile  xinitrc
docs/: assistant-commands.md  bluetooth-speakers.md  config-reference.md  home-assistant-photo-frame.md  mqtt-and-telemetry.md  notes-and-extras.md  public-photo-sources.md  pulse-config-align.md  pulse-multi-tools.md  troubleshooting.md  v1.0-test-coverage-roadmap.md  voice-assistant.md
docs/plans/: 2025-12 - refactoring-plan.md  phase-1-mqtt-publisher-extraction-plan.md
fuzz/: fuzz_datetime_parsing.py  fuzz_overlay_header.py  fuzz_utils.py
mcp-server/: README.md  config.py  pyproject.toml  server.py  ssh.py
mcp-server/tools/: __init__.py  config_tools.py  diagnostics.py  logs.py  status.py
models/: Boompod Zero Speaker Cup.3mf  Boompod Zero Speaker Cup.scad  ReSpeaker Mic Array V3.0 Cover - Deeper.3mf  ReSpeaker Mic Array V3.0 Cover - Deeper.scad  ReSpeaker Mic Array V3.0 Plate.3mf  ReSpeaker Mic Array V3.0 Plate.scad  ReSpeaker Mic Array V3.0 Stand.3mf  ReSpeaker Mic Array V3.0 Stand.scad
pulse/: __init__.py  audio.py  config_persist.py  datetime_utils.py  display.py  location_resolver.py  mqtt_discovery.py  overlay.py  overlay_assets.py  overlay_server.py  sound_library.py  systemd_notify.py  utils.py
pulse/assistant/: __init__.py  actions.py  audio.py  calendar_manager.py  calendar_sync.py  config.py  conversation_manager.py  earmuffs.py  event_handlers.py  home_assistant.py  info_query_handler.py  info_service.py  info_sources.py  llm.py  media_controller.py  mqtt.py  mqtt_publisher.py  music_handler.py  pipeline_orchestrator.py  preference_manager.py  response_modes.py  routines.py  schedule_commands.py  schedule_intents.py  schedule_service.py  schedule_shortcuts.py  scheduler.py  shopping_list.py  wake_detector.py  wyoming.py
pulse/overlay/: assets.py  server.py
tests/: conftest.py  test_actions.py  test_assistant_shortcuts.py  test_calendar_manager.py  test_calendar_sync.py  test_config.py  test_config_persist.py  test_conversation_manager.py  test_datetime_utils.py  test_earmuffs.py  test_event_handlers.py  test_home_assistant.py  test_info_query_handler.py  test_info_service.py  test_info_sources.py  test_llm.py  test_media_controller.py  test_mqtt_client.py  test_mqtt_publisher.py  test_music_handler.py  test_overlay.py  test_pipeline_orchestrator.py  test_preference_manager.py  test_response_modes.py  test_routines.py  test_schedule_commands.py  test_schedule_intents.py  test_schedule_service.py  test_schedule_service_pauses.py  test_schedule_shortcuts.py  test_scheduler.py  test_shopping_list.py  test_sound_library.py  test_systemd_notify.py  test_utils.py  test_wake_detector.py  test_wyoming.py
tools/: convert.py
