[project]
name = "pulse-os"
version = "0.1.0"
description = "Container project for PulseOS related python scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astral>=3.2",
    "httpx>=0.27",
    "packaging>=23.2",
    "paho-mqtt>=2.1.0",
    "psutil>=6.0.0",
    "websocket>=0.2.1",
    "wyoming>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "ruff>=0.6.5",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["bin", "pulse"]
extend-exclude = ["uv.lock"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "W",
    "UP",
]
ignore = [
    "E203",
]

[tool.ruff.format]
skip-magic-trailing-comma = false
docstring-code-format = true

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.5",
]
