[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-os"
version = "0.1.0"
description = "Container project for PulseOS related python scripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astral==3.2",
    "httpx==0.27.2",
    "icalendar==6.0.1",
    "packaging==24.2",
    "paho-mqtt==2.1.0",
    "psutil==6.1.0",
    "websocket==0.2.1",
    "websockets==14.1",
    "wyoming==1.6.0",
    "openlocationcode==1.0.1",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "pytest==9.0.1",
    "ruff==0.8.4",
]

[tool.setuptools.packages.find]
include = ["pulse", "pulse.*"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["bin", "pulse"]
extend-exclude = ["uv.lock"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "W",
    "UP",
]
ignore = [
    "E203",
]

[tool.ruff.format]
skip-magic-trailing-comma = false
docstring-code-format = true

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pytest>=9.0.1",
    "ruff>=0.6.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*:",
]
